--- a/styles/main.css
+++ b/styles/main.css
@@ -3,35 +3,728 @@
   margin: 0;
   padding: 0;
 }
-main{
-  background-color: aqua;
-  width: 612px;
-  margin: auto;
+.pagina1{
+  width: 1000px;    
+  height: 1480px;
+  margin: 10px 30px 20px 40px;
+  padding: 40px;
+  background-color: pink;
 }
-main article {
-  width: 200px;
-  height: 200px;
-  background-color: bisque;
+.pagina1a{
+  width: 300px;
+  height: 300px ;
+  margin: 10px 10px 5px 20px;
+  padding: 1px;
   display: inline-block;
+  background-color: blanchedalmond;
+}
+.pagina1a1{
+  width: 250px;
+  height: 250px ;
+  margin: 10px 10px 0px 7px;
+  padding: 15px;
   border-radius: 50%;
-}
-nav{
-  background-color: #FF1744;
-  text-align: center;
-}
-nav ul li {
   display: inline-block;
-  list-style: none;
+  background-color: #D8BC95;
 }
-nav ul li a{
+
+.pagina1b{
+  width: 300px;
+  height: 300px ;
+  margin: 10px 10px 5px 15px;
+  padding: 1px;
   display: inline-block;
-  padding: 15px 20px;
-  text-decoration: none;
-  color: #000000;
-  font-family: 'Roboto', sans-serif;
-  font-size: 22px;
+  background-color: #221A0E;
+}
+.pagina1b1{
+  width: 250px;
+  height: 250px ;
+  margin: 10px 10px 0px 7px;
+  padding: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #F09319;
+}
+.pagina1c{
+  width: 300px;
+  height: 300px ;
+  margin: 10px 10px 50px 21px;
+  padding: 1px;
+  display: inline-block;
+  background-color: #D3C7B7;
+}
+.pagina1c1{
+  width: 250px;
+  height: 250px ;
+  margin: 10px 10px 0px 7px;
+  padding: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #97611B;
+}
+.pagina1d{
+  width: 450px;
+  height: 450px ;
+  margin: 10px 10px 50px 30px;
+  padding: 1px;
+  display: inline-block;
+  background-color: #8727E0;
+}
+.pagina1d1{
+  width: 400px;
+  height: 400px ;
+  margin: 10px 10px 0px 7px;
+  padding: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: aqua;
+}
+.pagina1e{
+  width: 450px;
+  height: 450px ;
+  margin: 10px 10px 50px 21px;
+  padding: 1px;
+  display: inline-block;
+  background-color: #B699D1;
+}
+.pagina1e1{
+  width: 400px;
+  height: 400px ;
+  margin: 10px 10px 0px 7px;
+  padding: 15px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #085E5E;
+}
+.pagina1f{
+  width: 950px;
+  height: 580px ;
+  margin: 10px 20px 50px 2px;
+  padding: 1px;
+  display: inline-block;
+  background-color: #B699D1;
+}
+.pagina1x{
+  width:200px;
+  height: 500px ;
+  margin: 30px 40px 50px 80px;
+  padding: 1px;
+  display: inline-block;
+  background-color: #324B9C;
+}
+.pagina1x1{
+  width: 130px;
+  height: 130px ;
+  margin: 25px 20px 20px 35px;
+  padding: 1px;
+  background-color: #C52294;
+}
+.pagina1x2{
+  width: 130px;
+  height: 130px ;
+  margin: 30px 25px 20px 35px;
+  padding: 1px;
+  background-color: yellow;
+}
+.pagina1x3{
+  width: 130px;
+  height: 130px ;
+  margin: 30px 25px 20px 35px;
+  padding: 1px;
+  background-color:blue;
+}
+.pagina1g{
+  width:250px;
+  height: 500px ;
+  margin: 50px 30px 50px 50px;
+  padding: 1px;
+  display: inline-block;
+  background-color: red;
+}
+.pagina1g1{
+  width:200px;
+  height: 470px ;
+  margin: 20px 20px 20px 20px;
+  padding: 1px;
+  border-radius: 50%;
+  background-color: #58B2DB;
 }
 
+.pagina1y{
+  width:200px;
+  height: 500px ;
+  margin: 50px 20px 50px 50px;
+  padding: 1px;
+  display: inline-block;
+  background-color: #58B2DB;
+}
+.pagina1y1{
+  width: 130px;
+  height: 130px ;
+  margin: 25px 20px 20px 35px;
+  padding: 1px;
+  border-radius: 50%;
+  background-color: #FAEEFF;
+}
+.pagina1y2{
+  width: 130px;
+  height: 130px ;
+  margin: 30px 25px 20px 35px;
+  padding: 1px;
+  border-radius: 50%;
+  background-color: #B421A8;
+}
+.pagina1y3{
+  width: 130px;
+  height: 130px ;
+  margin: 30px 25px 20px 35px;
+  padding: 1px;
+  border-radius: 50%;
+  background-color: #3113B6;
+}
 
+.page2{
+  width: 900px;    
+  height: 1200px;
+  margin: 10px 30px 20px 40px;
+  padding: 40px;
+  background-color: #0E0B0C;
+}
+.page2a{
+  width: 350px;    
+  height: 350px;
+  margin: 5px 10px;
+  padding: 40px;
+  display: inline-block;
+  vertical-align: top;  
+  background-color: #16B5BB;
+}
+.page2a1{
+  width: 170px;
+  height: 170px ;
+  margin: auto;
+  border-radius: 50%;
+  display: inline-block;  
+  padding: 1px;  
+  background-color: #3113B6;
+}
+.page2a2{
+  width: 170px;
+  height: 170px ;
+  margin: auto ;
+  border-radius: 50%;
+  display: inline-block; 
+  padding: 1px;   
+  background-color: #3113B6;
+}
+.page2a3{
+  width: 170px;
+  height: 170px ;
+  margin: auto;
+  border-radius: 50%;
+  display: inline-block;  
+  padding: 1px;  
+  background-color: #3113B6;
+}
+.page2a4{
+  width: 170px;
+  height: 170px ;
+  margin:auto;
+  border-radius: 50%;
+  display: inline-block;   
+  padding: 1px; 
+  background-color: #3113B6;
+}
+.page2b{
+  width: 350px;    
+  height: 350px;
+  margin: 5px;
+  padding: 40px;
+  display: inline-block;
+  vertical-align: top;
+  background-color: #6C579C;
+}
+.page2b1{
+  width: 170px;
+  height: 170px ;
+  margin: auto;
+  border-radius: 50%;
+  padding: 1px;
+  display: inline-block;    
+  background-color: #13B629;
+}
+.page2b2{
+  width: 170px;
+  height: 170px ;
+  margin: auto;
+  border-radius: 50%;
+  padding: 1px;
+  display: inline-block;    
+  background-color: #B6B313;
+}
+.page2b3{
+  width: 170px;
+  height: 170px ;
+  margin: auto ;
+  border-radius: 50%;
+  padding: 1px;
+  display: inline-block;    
+  background-color: #21B613;
+}
+.page2b4{
+  width: 170px;
+  height: 170px ;
+  margin: auto;
+  border-radius: 50%;
+  padding: 1px;
+  display: inline-block;    
+  background-color: #13B636;
+}
+.page2c{
+  width: 500px;
+  height: 320px ;
+  margin: 50px 200px;
+  padding: 1px;
+  background-color: #1D1544;
+}
+.page2c1{
+  width: 200px;
+  height: 200px ;
+  margin: 50px 25px;
+  border-radius: 50%;
+  padding: 1px;
+  display: inline-block;    
+  background-color: #13B636;
+}
+.page2c2{
+  width: 200px;
+  height: 200px ;
+  margin: 50px 20px;
+  border-radius: 50%;
+  padding: 1px;
+  display: inline-block;    
+  background-color: #13B636;
+}
+.page2d{
+  width: 170px;
+  height: 320px ;
+  margin: 20px 5px;
+  padding: 1px;
+  display: inline-block;      
+  background-color: #2E09E7;
+}
+.page2d1{
+  width: 150px;
+  height: 290px ;
+  margin: 10px 5px;
+  padding: 1px;
+  border-radius: 50%;  
+  background-color: #51FFD4;
+}
+.page2e{
+  width: 170px;
+  height: 320px ;
+  margin: 20px 5px;
+  padding: 1px;
+  display: inline-block;      
+  background-color: #F0FF65;
+}
+.page2e1{
+  width: 150px;
+  height: 290px ;
+  margin: 10px 5px;
+  padding: 1px;
+  border-radius: 50%;  
+  background-color: #EC3902;
+}
+.page2f{
+  width: 170px;
+  height: 320px ;
+  margin: 20px 5px;
+  padding: 1px;
+  display: inline-block;      
+  background-color: #FF35FF;
+}
+.page2f1{
+  width: 150px;
+  height: 290px ;
+  margin: 10px 5px;
+  padding: 1px;
+  border-radius: 50%;  
+  background-color: #F81F1F;
+}
+.page2x{
+  width: 310px;
+  height: 320px ;
+  margin: 20px 10px;
+  padding: 1px;
+  display: inline-block;      
+  vertical-align: top;
+  background-color: #1F970F;
+}
+.page2x1{
+  width: 140px;
+  height: 140px ;
+  margin: 7px 5px;
+  padding: 1px;
+  border-radius: 50%; 
+  display: inline-block;   
+  background-color: #F81F1F;
+}
+.page2x2{
+  width: 140px;
+  height: 140px ;
+  margin: 7px 5px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page2x3{
+  width: 140px;
+  height: 140px ;
+  margin: 7px 5px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page2x4{
+  width: 140px;
+  height: 140px ;
+  margin: 7px 5px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3{
+  width: 1100px;
+  height: 1400px ;
+  margin: 10px 10px;
+  padding: 1px;
+  background-color: #1D1544;
+}
+.page3a{
+  width: 490px;    
+  height: 410px;
+  margin: 10px 15px;
+  padding: 10px;
+  display: inline-block;
+  vertical-align: top;  
+  background-color: #16B5BB;
+}
+.page3t{
+  width: 460px;    
+  height: 380px;
+  margin: 15px;
+  padding: 2px;
+  display: inline-block;
+  background-color: #FF133A;
+}
+.page3o{
+  width: 420px;    
+  height: 340px;
+  margin: 5px 7px;
+  padding: 10px;
+  display: inline-block;
+  background-color: rgba(216, 247, 81, 0.95);
+}
+.page3a1{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3a2{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3a3{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3a4{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3a5{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3a6{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
 
-
+.page3b{
+  width: 490px;    
+  height: 410px;
+  margin: 10px 15px;
+  padding: 10px;
+  display: inline-block;
+  vertical-align: top;  
+  background-color: #16B5BB;
+}
+.page3c{
+  width: 460px;    
+  height: 380px;
+  margin: 15px;
+  padding: 2px;
+  display: inline-block;
+  background-color: #FF607B;
+}
+.page3m{
+  width: 420px;    
+  height: 340px;
+  margin: 5px 7px;
+  padding: 10px;
+  display: inline-block;
+  background-color: rgba(136, 167, 0, 0.95);
+}
+.page3b1{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+    
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3b2{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+   
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3b3{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3b4{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+   
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3b5{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3b6{
+  width: 120px;
+  height: 120px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3d{
+  width: 1050px;    
+  height: 410px;
+  margin: 10px 15px;
+  padding: 10px;
+  display: inline-block;
+  background-color: #FF60CF;
+}
+.page3x{
+  width: 1020px;    
+  height: 380px;
+  margin: 15px;
+  padding: 2px;
+  display: inline-block;
+  background-color: #4D5EFF;
+}
+.page3d1{
+  width: 340px;    
+  height: 340px;
+  margin: 5px 22px;
+  padding: 10px;
+  display: inline-block;
+  background-color: rgba(241, 164, 20, 0.95);
+}
+.page3d2{
+  width: 140px;
+  height: 310px ;
+  margin: 20px 10px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3d3{
+  width: 140px;
+  height: 310px ;
+  margin: 20px 7px 20px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  display: inline-block;  
+  background-color: #F81F1F;
+}
+.page3d4{
+  width: 300px;    
+  height: 356px;
+  margin: 2px 20px;
+  padding: 1px;
+  display: inline-block;
+  background-color: rgba(241, 164, 20, 0.95);
+}
+.page3d5{
+  width: 285px;
+  height: 120px ;
+  margin: 30px 7px 30px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+   
+  background-color: #52D4AD;
+}
+.page3d6{
+  width: 285px;
+  height: 120px ;
+  margin: 20px 7px 40px 7px;
+  padding: 1px;
+  border-radius: 50%;  
+  background-color: #F81F1F;
+}
+.page3d7{
+  width: 180px;    
+  height: 356px;
+  margin: 2px 40px;
+  padding: 1px;
+  display: inline-block;
+  background-color: rgba(253, 52, 96, 0.95);
+}
+.page3d8{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 40px 30px 20px;
+  padding: 1px;
+  border-radius: 50%;  
+  background-color: #DB7171;
+}
+.page3d9{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 40px 40px 20px;
+  padding: 1px;
+  border-radius: 50%;  
+  background-color: #E916D7;
+}
+.page3z{
+  width: 1045px;    
+  height: 310px;
+  margin: 60px 8000px 20px 8px ;
+  padding: 1px;
+  background-color: #FD2828;
+}
+.page3z1{
+  width: 1015px;    
+  height: 270px;
+  margin: 15px ;
+  padding: 2px;
+  background-color: #0519C9;
+}
+.page3z2{
+  width: 985px;    
+  height: 230px;
+  margin: 15px ;
+  padding: 2px;
+  background-color: #92FF49;
+}
+.page3z3{
+  width: 960px;    
+  height: 200px;
+  margin: 15px ;
+  padding: 2px;
+  background-color: #DA0808;
+}
+.page3bo1{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 10px 40px 20px;
+  padding: 1px;
+  border-radius: 50%;
+  display: inline-block;  
+  background-color: #E916D7;
+}
+.page3bo2{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 10px 40px 20px;
+  padding: 1px;
+  border-radius: 50%;   
+ display: inline-block;
+  background-color: #E916D7;
+}
+.page3bo3{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 10px 40px 20px;
+  padding: 1px;
+  border-radius: 50%;
+  display: inline-block;  
+  background-color: #E916D7;
+}
+.page3bo4{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 10px 40px 20px;
+  padding: 1px;
+  border-radius: 50%;
+  display: inline-block;  
+  background-color: #E916D7;
+}
+.page3bo5{
+  width: 140px;
+  height: 140px ;
+  margin: 20px 10px 40px 20px;
+  padding: 1px;
+  border-radius: 50%;
+  display: inline-block;  
+  background-color: #E916D7;
+}
